// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should match snapshot (false) 1`] = `
<DocumentFragment>
  <div
    class="Dog"
  >
    <h1>
      Millie
    </h1>
    <button>
      Adopt me!
    </button>
  </div>
</DocumentFragment>
`;

exports[`Should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="Dog"
  >
    <h1>
      Millie
    </h1>
    <p>
      Millie has been adopted!
    </p>
  </div>
</DocumentFragment>
`;
